--- a/application.css
+++ b/application.css
@@ -10,7 +10,7 @@ body {
    style="overflow:scroll; automation;
  }
 main {
-         background:#070B19;
+         background-color: maroon;
          margin: 20px;
          padding: 5px 40px;
          border: border-radius;25px;
