--- a/application.css
+++ b/application.css
@@ -10,7 +10,7 @@ body {
    style="overflow:scroll; automation;
  }
 main {
-         background-color: hsl(hue, saturation, lightness)
+         background-color: red
          margin: 20px;
          padding: 5px 40px;
          border: border-radius;25px;
