--- a/application.css
+++ b/application.css
@@ -10,7 +10,7 @@ body {
    style="overflow:scroll; automation;
  }
 main {
-         background-color: darkred
+         background-color: rgb(146, 15, 15)
          margin: 20px;
          padding: 5px 40px;
          border: border-radius;25px;
